--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,11 +3,11 @@
   <%= @cocktail.name %>
   <% @cocktail.doses.each do |dose| %>
   <%= link_to "Delete", dose_path(dose), method: :delete %>
-  <%= cl_image_tag("san_francisco, width: 150, height: 150, crob: :thumb, gravity: :face") %>
+  <%= cl_image_tag("san_francisco", width: 150, height: 150, crop: :thumb, gravity: :face) %>
   <%= dose.description %>
   <%= dose.ingredient.name %>
   <% end %>
 </div>
 
 <%= link_to "Add a dose", new_cocktail_dose_path(params[:id]) %>
-<%= link_to "Go home", cocktails_path %>
+<%= link_to "Go home", root_path %>
