added a photo uploader feature to the website

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,6 @@
 <h1>Add a Cocktails</h1>
 <%= simple_form_for @cocktail do |t| %>
 <%= t.input :name %>
+<%= t.input :photo %>
+<%= t.input :photo_cache, as: :hidden %>
 <% end %>
