--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,7 +2,9 @@
 <div class="container">
   <ul>
     <% @cocktails.each do |cocktail| %>
-    <%= cl_image_tag("san_francisco", width:400, height: 300, crop:  :fill) %>
+    <% if cocktail.photo.present? %>
+      <%= cl_image_tag cocktail.photo, width:400, height: 300, crop:  :fill %>
+    <% end %>
     <%= link_to cocktail.name, cocktail_path(cocktail) %>
     <% end %>
   </ul>
