--- a/app/assets/stylesheets/doses.scss
+++ b/app/assets/stylesheets/doses.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the doses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.ingredients{
+
+}
+
+.myinfo{
+  padding: 20px;
+}
